style: estilizando a página

--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persona Web - Carl Jhonson</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asset&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="introducao">
-        <img class='img'src="img/Carl_Johnson_GTA_San_Andreas.png" alt="CJ - Carl Jhonson - GTA San Andreans">
+        <section class="img">
+            <img src="img/Carl_Johnson_GTA_San_Andreas.png" alt="CJ - Carl Jhonson - GTA San Andreans">
+        </section>
+        <se class="descricao">
+            <span class="personagem">Carl Johnson</span> ou "CJ" é o protagonista do icônico jogo Grand Theft Auto: San
+            Andreas, lançado em 2004 pela Rockstar Games. Ele é um jovem afro-americano que retorna à sua cidade natal,
+            Los
+            Santos, após cinco anos longe, motivado pela notícia da morte de sua mãe. CJ se envolve novamente com sua
+            antiga
+            gangue, os Grove Street Families, e embarca em uma jornada de redenção, vingança e ascensão dentro do mundo
+            do
+            crime. Ao longo do jogo, ele demonstra evolução pessoal e estratégica, tornando-se um dos personagens mais
+            carismáticos e marcantes da franquia GTA.
+        </se>
         <br>
-        <span class="personagem">Carl Johnson</span> ou "CJ" é o protagonista do icônico jogo Grand Theft Auto: San
-        Andreas, lançado em 2004 pela Rockstar Games. Ele é um jovem afro-americano que retorna à sua cidade natal, Los
-        Santos, após cinco anos longe, motivado pela notícia da morte de sua mãe. CJ se envolve novamente com sua antiga
-        gangue, os Grove Street Families, e embarca em uma jornada de redenção, vingança e ascensão dentro do mundo do
-        crime. Ao longo do jogo, ele demonstra evolução pessoal e estratégica, tornando-se um dos personagens mais
-        carismáticos e marcantes da franquia GTA.
+
+        <iframe width="100%" height="350PX" src="https://www.youtube.com/embed/HqqmcoQ6DDo?si=Yh9HDK1EGdlghcei"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>Um pouco da Gameplay de San Andreans</iframe>
     </div>
     <div class=" historia">
         <h1>História</h1>
@@ -72,6 +87,11 @@
                 duradoura.</li>
         </ul>
     </div>
+    <footer class="rodape">
+        <p>Criado por <a href="https://github.com/N3MDERICK" target="_blank">N3mderick</a>. Todos direitos reservados
+            &copy;.
+        </p>
+    </footer>
 </body>
 
 </html>
